Update auth, user_setting, user_setting_db to functionaing state

--- a/user_setting/Dockerfile
+++ b/user_setting/Dockerfile
@@ -2,13 +2,7 @@ FROM python:3.7
 ADD requirements.txt /requirements.txt
 RUN pip3 install -r requirements.txt
 
-FROM postgres:9.3
-ENV POSTGRES_USER docker
-ENV POSTGRES_PASSWORD docker
-ENV POSTGRES_DB docker
-ADD CreateDB.sql /docker-entrypoint-initdb.d/
-
 # Add the other things
 WORKDIR auth
-ADD . /.
+ADD . .
 ENTRYPOINT ["python3", "__main__.py"]
