--- a/apilayer/pom.xml
+++ b/apilayer/pom.xml
@@ -26,9 +26,14 @@
             <version>1.2</version>
             <scope>provided</scope> <!-- not needed at runtime -->
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>io.grpc</groupId>-->
+            <!--<artifactId>grpc-netty-shaded</artifactId>-->
+            <!--<version>${grpc.version}</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>io.grpc</groupId>
-            <artifactId>grpc-netty-shaded</artifactId>
+            <artifactId>grpc-netty</artifactId>
             <version>${grpc.version}</version>
         </dependency>
         <dependency>
@@ -47,11 +52,11 @@
             <version>${grpc.version}</version>
             <scope>test</scope>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.google.protobuf</groupId>-->
-            <!--<artifactId>protobuf-java-util</artifactId>-->
-            <!--<version>${protobuf.version}</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java-util</artifactId>
+            <version>${protobuf.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <extensions>
