--- a/user_setting/Dockerfile
+++ b/user_setting/Dockerfile
@@ -3,6 +3,6 @@ ADD requirements.txt /requirements.txt
 RUN pip3 install -r requirements.txt
 
 # Add the other things
-WORKDIR auth
+WORKDIR user_setting
 ADD . .
 ENTRYPOINT ["python3", "__main__.py"]
