--- a/user_setting_db/Dockerfile
+++ b/user_setting_db/Dockerfile
@@ -1,5 +1,8 @@
-FROM postgres:9.3
+FROM postgres:alpine
 ENV POSTGRES_USER docker
-ENV POSTGRES_PASSWORD docker
+ENV POSTGRES_PASSWORD password
 ENV POSTGRES_DB user_settings_db
+
 ADD CreateSettingsDB.sql /docker-entrypoint-initdb.d/
+#RUN ls
+#RUN ls /docker-entrypoint-initdb.d
