--- a/wall/Dockerfile
+++ b/wall/Dockerfile
@@ -3,6 +3,6 @@ ADD requirements.txt /requirements.txt
 RUN pip3 install -r requirements.txt
 
 # Add the other things
-WORKDIR auth
-ADD ./ .
+WORKDIR wall
+ADD . .
 ENTRYPOINT ["python3", "__main__.py"]
