--- a/news_feed_data_access/db/Dockerfile
+++ b/news_feed_data_access/db/Dockerfile
@@ -1,5 +1,2 @@
 FROM postgres:alpine
-ENV POSTGRES_USER docker
-ENV POSTGRES_PASSWORD docker
-ENV POSTGRES_DB news_feed_data_access
-ADD CreateSettingsDB.sql /docker-entrypoint-initdb.d/
+ADD CreateNewsFeedDataAccessDB.sql /docker-entrypoint-initdb.d/
