--- a/posts/Dockerfile
+++ b/posts/Dockerfile
@@ -4,5 +4,5 @@ RUN pip3 install -r requirements.txt
 
 # Add the other things
 WORKDIR posts
-ADD ./ .
+ADD . .
 ENTRYPOINT ["python3", "__main__.py"]
