--- a/friends_db/Dockerfile
+++ b/friends_db/Dockerfile
@@ -1,5 +1,2 @@
-FROM postgres:9.3
-ENV POSTGRES_USER docker
-ENV POSTGRES_PASSWORD docker
-ENV POSTGRES_DB user_settings_db
-ADD CreateSettingsDB.sql /docker-entrypoint-initdb.d/
+FROM postgres:alpine
+ADD CreateFriendsDB.sql /docker-entrypoint-initdb.d/
