Revamped postgres again and added a basic client that can post and show the wall

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 
 apilayer/target
 apilayer/src/main/proto
-**/*.pb.swift
-**/*.grpc.swift
+#**/*.pb.swift
+#**/*.grpc.swift
 
 ### Python template
 **/*_pb2.py
