--- a/news_feed_merge/Dockerfile
+++ b/news_feed_merge/Dockerfile
@@ -1,8 +1,6 @@
-FROM python:3.7
-ADD requirements.txt /requirements.txt
-RUN pip3 install -r requirements.txt
-
-# Add the other things
-WORKDIR auth
-ADD ./ .
-ENTRYPOINT ["python3", "__main__.py"]
+FROM swift:5.0.1 as builder
+RUN apt-get update -y && apt-get install -y libssl-dev libz-dev unzip libpq-dev
+WORKDIR /news_feed_merge
+ADD . /news_feed_merge
+RUN swift build --build-path build
+ENTRYPOINT ["/news_feed_merge/build/x86_64-unknown-linux/debug/news_feed_merge"]
