--- a/posts_db/Dockerfile
+++ b/posts_db/Dockerfile
@@ -1,2 +1,5 @@
 FROM postgres:alpine
+ENV POSTGRES_USER docker
+ENV POSTGRES_PASSWORD password
+ENV POSTGRES_DB posts
 ADD CreatePostsDB.sql /docker-entrypoint-initdb.d/
