--- a/user_setting_db/Dockerfile
+++ b/user_setting_db/Dockerfile
@@ -1,2 +1,6 @@
 FROM postgres:alpine
+ENV POSTGRES_USER docker
+ENV POSTGRES_PASSWORD password
+ENV POSTGRES_DB user_settings
+
 ADD CreateSettingsDB.sql /docker-entrypoint-initdb.d/
