--- a/wall_db/Dockerfile
+++ b/wall_db/Dockerfile
@@ -1,2 +1,5 @@
 FROM postgres:alpine
+ENV POSTGRES_USER docker
+ENV POSTGRES_PASSWORD password
+ENV POSTGRES_DB wall
 ADD CreateWallDB.sql /docker-entrypoint-initdb.d/
