Changed to more async operations

--- a/apilayer/pom.xml
+++ b/apilayer/pom.xml
@@ -20,6 +20,21 @@
     <name>apilayer</name>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
+        <!-- ADD Prometheus Logging Hooks -->
+
+        <!-- The client -->
+        <dependency>
+            <groupId>io.prometheus</groupId>
+            <artifactId>simpleclient</artifactId>
+            <version>0.6.0</version>
+        </dependency>
+        <!-- Hotspot JVM metrics-->
+        <dependency>
+            <groupId>io.prometheus</groupId>
+            <artifactId>simpleclient_hotspot</artifactId>
+            <version>0.6.0</version>
+        </dependency>
+
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
