--- a/post_importer_cpp/CMakeLists.txt
+++ b/post_importer_cpp/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required (VERSION 3.7.2)
+cmake_policy(SET CMP0042 NEW)
 project (post_importer CXX)
+if (APPLE)
+    set(CMAKE_MACOSX_RPATH ON)
+endif ()
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -7,7 +11,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/build/cmake/")
 set(PROTOBUF_IMPORT_DIRS "${CMAKE_SOURCE_DIR}/")
 
-include(build/cmake/redox.cmake)
+#include(build/cmake/redox.cmake)
 add_definitions(-DNDEBUG)
 
 find_package (Protobuf REQUIRED)
@@ -21,6 +25,8 @@ endfunction()
 include_directories(${PROTOBUF_INCLUDE_DIR})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
+#add_subdirectory(cppkafka)
+
 generate_proto(post_importer.proto)
 generate_proto(posts.proto)
 generate_proto(shared.proto)
@@ -32,5 +38,9 @@ add_executable(post_importer
         post_importer.pb
         include/main.cpp)
 
-target_link_libraries(post_importer ${PROTOBUF_LIBRARIES} ${GRPC_LIBRARIES})gi
+#FIND_LIBRARY(redox REQUIRED)
+#FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options)
+find_package(CppKafka REQUIRED)
+
+target_link_libraries(post_importer ${PROTOBUF_LIBRARIES} ${GRPC_LIBRARIES} CppKafka::cppkafka)
 #target_link_libraries(news_feed Protobuf::protolib GRPC::grpc)
