Started adding post_importer impl and redis wrapper

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,6 +100,7 @@ services:
     tty: true
     links:
       - post_importer_redis
+      - post_importer_kafka:kafka
     ports:
       - 9000
     environment:
@@ -107,6 +108,26 @@ services:
       - POST_INCREMENT_KEY=global_post_id
   post_importer_redis:
     image: redis:alpine
+  post_importer_zookeeper:
+    image: wurstmeister/zookeeper
+    tty: true
+    ports:
+      - 2181
+  post_importer_kafka:
+    image: wurstmeister/kafka:latest
+    ports:
+      - 9094
+    links:
+      - post_importer_zookeeper:zookeeper
+    environment:
+      HOSTNAME_COMMAND: "docker info | grep ^Name: | cut -d' ' -f 2"
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://:9092,OUTSIDE://_{HOSTNAME_COMMAND}:9094
+      KAFKA_LISTENERS: INSIDE://:9092,OUTSIDE://:9094
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
 
   token_dispenser:
     build:
