--- a/post_importer_cpp/Dockerfile
+++ b/post_importer_cpp/Dockerfile
@@ -14,17 +14,20 @@ RUN apt-get update && apt-get install -y \
   unzip \
   && apt-get clean
 
-ENV GRPC_RELEASE_TAG v1.16.0
+ENV GRPC_RELEASE_TAG v1.22.0
 ENV BIN_NAME post_importer
 
 ENV BIN_OPT /opt/$BIN_NAME
 ENV BIN_BUILD_PATH /usr/local/$BIN_NAME
 
+###################################
+# Install GRPC
+###################################
 RUN git clone -b ${GRPC_RELEASE_TAG} https://github.com/grpc/grpc /var/local/git/grpc && \
     cd /var/local/git/grpc && \
     git submodule update --init --recursive
 
-RUN echo "-- installing protobuf" && \
+RUN echo '-- installing protobuf' && \
     cd /var/local/git/grpc/third_party/protobuf && \
     ./autogen.sh && ./configure --enable-shared && \
     make -j$(nproc) && make -j$(nproc) check && make install && make clean && ldconfig
@@ -33,14 +36,25 @@ RUN echo "-- installing grpc" && \
     cd /var/local/git/grpc && \
     make -j$(nproc) && make install && make clean && ldconfig
 
+###################################
+# Install additional C++ dependencies
+###################################
 RUN apt-get update && apt-get install -y libhiredis-dev libev-dev zlib1g-dev libssl-dev libsasl2-dev libzstd-dev libboost-all-dev
 
-ADD https://cmake.org/files/v3.9/cmake-3.9.2-Linux-x86_64.sh /cmake-3.9.2-Linux-x86_64.sh
+################################
+# Update CMake
+################################
+ENV CMAKE_MAJOR_VERSION 3.9
+ENV CMAKE_MINOR_VERSION 2
+RUN curl https://cmake.org/files/v${CMAKE_MAJOR_VERSION}/cmake-${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}-Linux-x86_64.sh -o /cmake-${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}-Linux-x86_64.sh
 RUN mkdir /opt/cmake
-RUN sh /cmake-3.9.2-Linux-x86_64.sh --prefix=/opt/cmake --skip-license
+RUN sh /cmake-${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}-Linux-x86_64.sh --prefix=/opt/cmake --skip-license
 RUN ln -s /opt/cmake/bin/cmake /usr/local/bin/cmake
 RUN cmake --version
 
+###################################
+# Install LibRDKafka (cppkafka deps)
+####################################
 ENV LIBRDKAFKA_VERSION 0.11.4
 RUN curl -Lk -o /root/librdkafka-${LIBRDKAFKA_VERSION}.tar.gz https://github.com/edenhill/librdkafka/archive/v${LIBRDKAFKA_VERSION}.tar.gz && \
       tar -xzf /root/librdkafka-${LIBRDKAFKA_VERSION}.tar.gz -C /root && \
@@ -49,11 +63,22 @@ RUN curl -Lk -o /root/librdkafka-${LIBRDKAFKA_VERSION}.tar.gz https://github.com
 
 RUN git clone https://github.com/mfontanini/cppkafka && \
     mkdir -p cppkafka/build && \
-    ls cppkafka && \
     cd cppkafka/build && \
     cmake .. && \
     make install
 
+###################################
+# Install Redox (cpp redis client)
+###################################
+RUN git clone https://github.com/hmartiro/redox.git && \
+    mkdir -p redox/build && \
+    cd redox/build && \
+    cmake .. && \
+    make install
+
+###################################
+# Build binary
+###################################
 COPY . $BIN_BUILD_PATH/src/$BIN_NAME/
 
 RUN echo "-- building $BIN_NAME" && \
@@ -68,7 +93,6 @@ RUN echo "-- building $BIN_NAME" && \
     chmod +x bin/start.sh
 
 WORKDIR /usr/local/post_importer
-RUN ls /usr/local/post_importer/out/post_importer/bin/
 ENTRYPOINT ["/bin/bash"]
 CMD ["-s"]
 
@@ -76,7 +100,5 @@ FROM debian:stretch as runtime
 COPY --from=build /usr/local/post_importer/out/post_importer/bin/ /opt/post_importer/
 WORKDIR /opt/post_importer
 
-RUN ls /opt/post_importer
-RUN cat start.sh
 EXPOSE 8080
 ENTRYPOINT ["/bin/bash", "start.sh"]
