--- a/apilayer/Dockerfile
+++ b/apilayer/Dockerfile
@@ -2,6 +2,5 @@ FROM maven:3.6-jdk-11-slim
 WORKDIR apilayer
 ADD src src/
 ADD pom.xml pom.xml
-RUN mvn -X clean package
-RUN ls /apilayer/src/main/proto/protos
+RUN mvn -q clean package
 ENTRYPOINT ["java", "-cp", "target/apilayer-1.0-SNAPSHOT.jar", "com.foobar.social.ApiServer"]
