--- a/create_user/create_user_kube.yaml
+++ b/create_user/create_user_kube.yaml
@@ -6,7 +6,7 @@ metadata:
   name: create-user
 spec:
   ports:
-    - port: 3001
+    - port: 4477
   selector:
     app: create_user
   type: ClusterIP
@@ -25,17 +25,17 @@ spec:
         app: create_user
     spec:
       containers:
-        - createuser
-      image: foobar-social_create_user:latest
-      imagePullPolicy: Never
-      tty: True
-      ports:
-        - containerPort: 3001
-      resources:
-        requests:
-          cpu: "100m"
-          memory: "64Mi"
-        limits:
-          cpu: "100m"
-          memory: "128Mi"
+      - name: createuser
+        image: foobar-social_create_user:latest
+        imagePullPolicy: Never
+        tty: True
+        ports:
+          - containerPort: 4477
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "64Mi"
+          limits:
+            cpu: "100m"
+            memory: "128Mi"
 
