--- a/profile/Dockerfile
+++ b/profile/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.7
-#ADD requirements.txt /requirements.txt
-#RUN pip3 install -r requirements.txt
+ADD requirements.txt /requirements.txt
+RUN pip3 install -r requirements.txt
 
 # Add the other things
-#WORKDIR auth
-#ADD ./ .
-#ENTRYPOINT ["python3", "__main__.py"]
+WORKDIR profile
+ADD . .
+ENTRYPOINT ["python3", "__main__.py"]
